# opengl_android

./: .gitignore  LICENSE  README.md  build.gradle
.github/workflows/: androidci.yml  create_apk.yml  generate_build.yml  sample_actions.yml
app/: CMakeLists.txt  build.gradle
app/assimp/build_android/: CMakeCache.txt  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
app/assimp/build_android/code/: Makefile  cmake_install.cmake
app/assimp/build_android/port/AndroidJNI/: Makefile  cmake_install.cmake
app/assimp/build_android/test/: Makefile  cmake_install.cmake
app/assimp/build_android/test/headercheck/: Makefile  cmake_install.cmake
app/assimp/build_android/tools/assimp_cmd/: Makefile  cmake_install.cmake
app/assimp/code/Common/: Importer.cpp
app/src/androidTest/java/com/demo/opengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: anim_object.frag  anim_object.vert  background_show_depth_color_visualization.frag  background_show_depth_color_visualization.vert  basic_object.frag  basic_object.vert  camera.frag  camera.vert  circle.frag  circle.vert  object.frag  object.vert  plane.frag  plane.vert  screenquad.frag  screenquad.vert
app/src/main/cpp/: arcoreimpl.cpp  camera.cpp  opengl.cpp
app/src/main/cpp/core/: CameraView.cpp  DepthTexture.cpp  IndexBuffer.cpp  MathHelper.cpp  Mesh.cpp  PickTexture.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Translation.cpp  VextexBuffer.cpp  WorldTransform.cpp  ar.cpp  background_renderer.cpp  plane_renderer.cc
app/src/main/cpp/core/headers/: AssimpHelpers.h  BobLampCleanRenderer.h  CameraView.h  Circle.h  DepthTexture.h  IndexBuffer.h  Material.h  MathHelper.h  Mesh.h  PickTexture.h  Renderer.h  Rotation.h  Shader.h  Texture.h  Translation.h  Utils.h  VertexBuffer.h  WorldTransform.h  ar.h  background_renderer.h  plane_renderer.h
app/src/main/cpp/core/models/: BobLampCleanRenderer.cpp  Circle.cpp
app/src/main/java/com/demo/opengl/: CameraActivity.kt  GLHelper.kt  GlSurface.kt  MainActivity.kt  Shader.kt  Square.kt  Triangle.kt
app/src/main/java/com/demo/opengl/gl/: GLHelper.kt  GlSurface.kt  Shader.kt
app/src/main/java/com/demo/opengl/gl/model/: Square.kt  Triangle.kt
app/src/main/java/com/demo/opengl/provider/: ArcoreInterface.kt  CameraInterface.kt  CameraMode.kt  CameraModeImpl.kt  CameraRenderer.kt  CameraSettingsHolder.kt  CameraSurface.kt  CaptureListener.kt  ProviderConst.kt
app/src/main/java/com/demo/opengl/ui/: ArcoreActivity.kt  CameraActivity.kt  IntroActivity.kt  MainActivity.kt  PreviewActivity.kt
app/src/main/java/com/demo/opengl/utils/: Constants.kt  Utils.kt
app/src/main/res/drawable/: ic_capture.xml
app/src/main/res/layout/: activity_arcore.xml  activity_camera.xml  activity_intro.xml  activity_preview.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/demo/opengl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
